added a short note
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/reports/Step3_1a.vm
+++ b/src/templates/screens/reports/Step3_1a.vm
@@ -26,6 +26,7 @@
              <td>
                 <input type="text" size="20" name="$intakeReport.NewDate.Key"
                     value="$intakeReport.NewDate" />
+                <p>Leave blank for current date/time</p>
             </td>
         </tr>
   <tr>
